vcluster_versioned_docs/version-0.30.0/_fragments/sync-from-host-resources.mdx
vCluster can sync certain resources from the host cluster to make them available inside the virtual cluster, but when these resources are
synced, they are only synced in read-only mode. No changes to the resource in the virtual cluster syncs back to the host cluster as the
resources are shared across the host cluster.

A good example would be nodes, which are nice to view inside the virtual cluster and can be also used to enabled certain features such as [scheduling inside the vCluster](/vcluster/configure/vcluster-yaml/control-plane/other/advanced/virtual-scheduler,
but you wouldn't want your virtual cluster to change the node itself. Another benefit of only syncing from host is that vCluster itself only requires read-only RBAC permissions.

vCluster also allows to sync custom resources via the [custom resource definitions syncer](../configure/vcluster-yaml/sync/from-host/custom-resources

There are a couple of labels that are created on the host cluster by vCluster that never get synced to the virtual cluster resource. These labels are:

* `release` (Label is needed to avoid conflicts with the vCluster pods themselves).
* `vcluster.loft.sh/namespace`
* `vcluster.loft.sh/managed-by`
* `vcluster.loft.sh/controlled-by`

### Enabled by default

* [Events](../configure/vcluster-yaml/sync/from-host/events

### Disabled by default
* [CustomResources](../configure/vcluster-yaml/sync/from-host/custom-resources
* [Nodes](../configure/vcluster-yaml/sync/from-host/nodes
* [IngressClasses](../configure/vcluster-yaml/sync/from-host/ingress-classes
* [StorageClasses](../configure/vcluster-yaml/sync/from-host/storage-classes
* [CSINodes](../configure/vcluster-yaml/sync/from-host/csi-nodes
* [CSIDrivers](../configure/vcluster-yaml/sync/from-host/csi-drivers
* [CSIStorageCapacities](../configure/vcluster-yaml/sync/from-host/csi-storage-capacities
* [ConfigMaps](../configure/vcluster-yaml/sync/from-host/configmaps
* [Secrets](../configure/vcluster-yaml/sync/from-host/secrets

### No bi-directional syncing

Since syncing resources from the host cluster is in read only mode and changes in the virtual cluster do not
get applied to the resource in the host cluster, bi-directional syncing does not exist across these resources.

